# flutter_webgpu_rend

./: .gitignore  README.md  pubspec.yaml
.github/workflows/: release_example.yml
android/: build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
android/src/main/cpp/: CMakeLists.txt  webgpu_rend_android_api.cpp
android/src/main/kotlin/com/funguscow/webgpu_rend/: WebgpuRendPlugin.kt
example/: .gitignore  pubspec.yaml
example/android/app/: build.gradle.kts
example/assets/: sword.mtl
example/lib/: cube.dart  image.dart  main.dart  object.dart  paint.dart  triangle.dart
example/windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
lib/: gpu_resources.dart  obj_load.dart  webgpu_rend.dart
lib/src/: webgpu_bindings_generated.dart
linux/: CMakeLists.txt  sw_pixel_buffer.cc  sw_rend_plugin.cc
linux/include/sw_rend/: sw_rend_plugin.h
src/: webgpu_rend_api.h
test/: test_native_method_channel_test.dart
windows/: CMakeLists.txt  webgpu_rend_ffi.cpp  webgpu_rend_plugin.cpp  webgpu_rend_plugin.h  webgpu_rend_plugin_c_api.cpp
windows/include/webgpu_rend/: webgpu_rend_plugin_c_api.h
